--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'com.example.todoliste'
-    mainClass = 'com.example.todoliste.HelloApplication'
+    mainClass = 'com.example.todoliste.application.ToDoApplication'
 }
 
 javafx {
